--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
             </p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
+            <h1 class="text-center"><i class="fa fa-calendar" aria-hidden="true"></i></h1>
             <h3 class="text-center">Modular Styling and Templating</h3>
             <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
             You can change the theme or write your custom by overwriting bootstrap sass variables for different color set, font options, etc.</p>
