--- a/index.html
+++ b/index.html
@@ -16,45 +16,77 @@ layout: default
 
     <div class="row">
         <div class="col-md-6">
-            <h2 class="header-light regular-pad">What is Jekyll?</h2>
+            <h3 class="header-light regular-pad">Who is Hyesung Oh?</h3>
             <blockquote>
-              <p>Jekyll is a simple, blog-aware, static site generator. It takes a template
-              directory containing raw text files in various formats, runs it through
-              a converter (like <a href="https://daringfireball.net/projects/markdown/">Markdown</a>)
-              and our <a href="https://github.com/Shopify/liquid/wiki">Liquid</a> renderer, and
-              spits out a complete, ready-to-publish static website suitable
-              for serving with your favorite web server. Jekyll also happens to be the engine
-              behind <a href="https://pages.github.com">GitHub Pages</a>, which means you can use Jekyll
-              to host your project’s page, blog, or website from GitHub’s servers <strong>for
-              free</strong>.</p>
+              <p>게임 개발 조금, 웹 개발 더 쪼금, ML 엄청 쪼끔하는 개발자 겸 기획자</p>
+              <table class="table table-striped table-hover ">
+                <tbody>
+                  <tr>
+                    <td colspan="2" align="center">Birth</td>
+                    <td colspan="2" align="center">04.14.1998</td>
+                  </tr>
+                  <tr>
+                    <td colspan="2" align="center">Email</td>
+                    <td colspan="2" align="center">haesungoh414@gmail.com</td>
+                  </tr>
+                  <tr>
+                    <td align="center">Github</td>
+                    <td align="center">
+                      <a href="https://github.com/hyesungoh/">
+                      <i class="fa fa-github" aria-hidden="true"></i>
+                      </a>
+                    </td>
+                    <td align="center">Linkedin</td>
+                    <td align="center">
+                      <a href="https://www.linkedin.com/in/hyesungoh414/">
+                      <i class="fa fa-linkedin" aria-hidden="true"></i>
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td align="center">Facebook</td>
+                    <td align="center">
+                      <a href="https://www.facebook.com/hyesungoh414/">
+                      <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                      </a>
+                    </td>
+                    <td align="center">Slideshare</td>
+                    <td align="center">
+                      <a href="https://www.slideshare.net/HyesungOh1/">
+                      <i class="fa fa-slideshare" aria-hidden="true"></i>
+                      </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </blockquote>
         </div>
         <div class="col-md-6 text-center">
-            <img src="img/jekyll-dark.png" alt="" class="img-responsive">
+            <img src="img/profile.png" alt="" class="img-responsive">
         </div>
     </div>
 
     <hr>
 
     <div class="row">
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Easy to install and publish</h3>
-            <p>Get started by clonening source into GitHub account of your project. Thanks to <a href="https://pages.github.com">GitHub Pages</a>,
-              it will be automatically compiled and publsihed under your project's subdomain on `github.io`.
+        <!-- <div class="col-sm-4">
+            <h1 class="text-center"><i class="fa fa-address-book-o" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Contact</h3>
+            <p>Email을 이용하여 연락해주시기 바랍니다/
+            </p>
+        </div> -->
+        <div class="col-sm-6">
+            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
+            <h4 class="text-center">Used jekyll doc theme</h4>
+            <p>This blog used <a href="https://github.com/aksakalli/jekyll-doc-theme">jekyll doc theme</a> to custom,
+             theme use <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
             </p>
         </div>
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-calendar" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Modular Styling and Templating</h3>
-            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            You can change the theme or write your custom by overwriting bootstrap sass variables for different color set, font options, etc.</p>
-        </div>
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Git based source control</h3>
-            <p>Leverege from Git version control system by
-              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
+        <div class="col-sm-6">
+            <h1 class="text-center"><i class="fa fa-git" aria-hidden="true"></i></h1>
+            <h4 class="text-center">Git based source control</h4>
+            <p>This blog using <a href="https://pages.github.com/">github pages</a>, <a href="https://jekyllrb-ko.github.io/">jekyll</a>
+             and git to source control</p>
         </div>
     </div>
 
