--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
         <div class="col-md-6">
             <h3 class="header-light regular-pad">Who is Hyesung Oh?</h3>
             <blockquote>
-              <p>게임 개발 조금, 웹 개발 더 쪼금, ML 엄청 쪼끔하는 개발자 겸 기획자</p>
+              <p>Little Game, Web, ML Developer or Planner</p>
               <table class="table table-striped table-hover ">
                 <tbody>
                   <tr>
