--- a/index.html
+++ b/index.html
@@ -1,94 +1,1 @@
----
-layout: default
----
-<!--
-<div class="header-container jumbotron">
-    <div class="container">
-        <h1>Jekyll Template for Project Websites</h1>
-        <p>Simple and modern design for publishing blog posts, documentation and many more things for your project.
-          You can now clone and start to create a website for your project like this one.</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
-    </div>
-</div>
- -->
-
-<div class="container">
-
-    <div class="row">
-        <div class="col-md-6">
-            <h3 class="header-light regular-pad">Who is Hyesung Oh?</h3>
-            <blockquote>
-              <p>Little Game, Web, ML Developer or Planner</p>
-              <table class="table table-striped table-hover ">
-                <tbody>
-                  <tr>
-                    <td colspan="2" align="center">Birth</td>
-                    <td colspan="2" align="center">04.14.1998</td>
-                  </tr>
-                  <tr>
-                    <td colspan="2" align="center">Email</td>
-                    <td colspan="2" align="center">haesungoh414@gmail.com</td>
-                  </tr>
-                  <tr>
-                    <td align="center">Github</td>
-                    <td align="center">
-                      <a href="https://github.com/hyesungoh/">
-                      <i class="fa fa-github" aria-hidden="true"></i>
-                      </a>
-                    </td>
-                    <td align="center">Linkedin</td>
-                    <td align="center">
-                      <a href="https://www.linkedin.com/in/hyesungoh414/">
-                      <i class="fa fa-linkedin" aria-hidden="true"></i>
-                      </a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td align="center">Facebook</td>
-                    <td align="center">
-                      <a href="https://www.facebook.com/hyesungoh414/">
-                      <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                      </a>
-                    </td>
-                    <td align="center">Slideshare</td>
-                    <td align="center">
-                      <a href="https://www.slideshare.net/HyesungOh1/">
-                      <i class="fa fa-slideshare" aria-hidden="true"></i>
-                      </a>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </blockquote>
-        </div>
-        <div class="col-md-6 text-center">
-            <img src="img/profile.png" alt="" class="img-responsive">
-        </div>
-    </div>
-
-    <hr>
-
-    <div class="row">
-        <!-- <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-address-book-o" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Contact</h3>
-            <p>Email을 이용하여 연락해주시기 바랍니다/
-            </p>
-        </div> -->
-        <div class="col-sm-6">
-            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
-            <h4 class="text-center">Used jekyll doc theme</h4>
-            <p>This blog used <a href="https://github.com/aksakalli/jekyll-doc-theme">jekyll doc theme</a> to custom,
-             theme use <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            </p>
-        </div>
-        <div class="col-sm-6">
-            <h1 class="text-center"><i class="fa fa-git" aria-hidden="true"></i></h1>
-            <h4 class="text-center">Git based source control</h4>
-            <p>This blog using <a href="https://pages.github.com/">github pages</a>, <a href="https://jekyllrb-ko.github.io/">jekyll</a>
-             and git to source control</p>
-        </div>
-    </div>
-
-
-</div>
+google-site-verification: googleac01eb0ac5d9608d.html
