--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ layout: default
 
     <div class="row">
         <div class="col-md-6">
-            <h3 class="header-light regular-pad">Who is Hyesung Oh?</h3>
+            <h3 class="header-light regular-pad">Information about writer</h3>
             <blockquote>
-              <p>Little Game, Web, ML Developer or Planner</p>
+              <p>welcome :D</p>
               <table class="table table-striped table-hover ">
                 <tbody>
                   <tr>
